--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -15,3 +15,6 @@ zull.routes.payroll.path=/hr-payroll/**
 
 zull.routes.user.service-id=hr-user
 zull.routes.user.path=/hr-user/**
+
+zull.routes.oauth.service-id=hr-oauth
+zull.routes.oauth.path=/hr-oauth/**
